# learn-band-oracle

./: README.md  deploy-datasrc-guanyu.sh  deploy-datasrc-laozi.sh  deploy-datasrc.sh  download-oracle.py  oracle-script.rs  send-request-guanyu.sh  send-request-laozi.sh
bech32/: send-request.sh
bech32/datasource/: ccxt.py  coinmarketcap.py
bech32/owasm/: deploy-laozi.sh
bech32/owasm/src/: lib.rs
gold/: send-request-guanyu.sh  send-request-laozi.sh
gold/datasource/: datasource-freeforexapi.com.py  datasource-goldprice.org.py  deploy-datasrc-guanyu.sh
gold/owasm/: Cargo.toml  deploy-guanyu.sh  deploy-laozi.sh
oracle-downloader/: download-oracle-laozi.py  download-oracle.py
owasm/: Cargo.toml  deploy-guanyu.sh  deploy-laozi.sh  deploy.sh
owasm/src/: lib.rs
owasm2/: deploy-laozi.sh
owasm2/src/: lib.rs
pentest/datasource/: deploy-datasrc-laozi.sh
pentest/owasm/: Cargo.toml  deploy-laozi.sh  send-request-spam.sh  send-request.sh
pentest/owasm/src/: lib.rs  pentest.rs
premium/: send-request.sh
premium-datasource/: coinmarketcap.py  deploy-laozi.sh  send-request.sh
premium-demo/: send-request.sh
premium-demo/datasource/: coingecko.py  deploy-laozi.sh  get-cgk-list.py
premium-demo/owasm/: Cargo.toml  deploy-laozi.sh
premium-demo/owasm/src/: lib.rs
premium/datasource/: coinmarketcap.py
premium/owasm/: Cargo.toml
